Add google fonts

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,20 @@
   }
 }
 
+.montserrat-regular {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.montserrat-semibold {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
 #root {
     width: 100%;
 }
@@ -39,6 +53,11 @@ body {
   font-size: 1.6rem;
   background-image: url("bg.png");
   background-size: cover;
+
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
   
 }
 
@@ -53,7 +72,7 @@ a {
   text-decoration: inherit;
 
   padding: 1rem 1.8rem;
-  border-bottom: .3rem solid var(--color-light);
+  border-bottom: .3rem solid transparent;
   transition: 
     background-color .8s, 
     border-color .8s,
