--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ a {
     color .8s;
 }
 
-a:hover,
+a:hover, a.active,
 a:focus, a:focus-visible {
   background-color: var(--color-blue);
   border-color: var(--color-blue);
