--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ body {
   font-size: 1.6rem;
   background-image: url("bg.png");
   background-size: cover;
+  background-position: center;
 
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
